Fix HARD button bug on mobile screen

--- a/colorGame.css
+++ b/colorGame.css
@@ -41,6 +41,7 @@ h1 {
 }
 
 #stripe {
+    display: flex;
     background:white;
     height: 30px;
     text-align: center;
